--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
                 <p style="text-align: center; position: absolute; right: 10px; bottom: 3px ; color: black;">لترجع للقائمة الرئيسية ضغاط على Steve</p>
             </div>
             </div>
-            <form action="https://formspree.io/f/mzzpjweg" method="POST">
+            <form action="https://submit-form.com/coXGfF8oQ" method="POST">
                 <div class="all">
             <div class="quiz">
                 
