--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
                 <p style="text-align: center; position: absolute; right: 10px; bottom: 3px ; color: black;">لترجع للقائمة الرئيسية ضغاط على Steve</p>
             </div>
             </div>
-            <form action="https://submit-form.com/coXGfF8oQ" method="POST">
+            <form action="https://api.web3forms.com/submit" method="POST">
                 <div class="all">
             <div class="quiz">
                 
@@ -26,12 +26,12 @@
                         <div class="valueleft">0</div>
                         <div class="valuemiddle">5</div>
                         <div class="valueright">10</div>
-                        <input class="line" name="range" type="range" min="0" max="10" value="0" steps="1">
+                        <input class="line" name="range" value="09ef4f94-439f-428d-9891-a7c816fe7dea" type="range" min="0" max="10" value="0" steps="1">
                         <p>سحاب عقد المحبة</p>
                     </div>
                 </div>  
             </div>
-            <input class="input" name="name" placeholder="اسمك" required> 
+            <input class="input" name="name" value="09ef4f94-439f-428d-9891-a7c816fe7dea" placeholder="اسمك" required> 
             <button type="submit" class="button">توكل على الله</button>
         </div>
         </form>   
