--- a/project.html
+++ b/project.html
@@ -9,6 +9,7 @@
         <div class="top">
             <a href="index.html"><img src="image/steve.png" alt="" style="width: 250px;"></a>
         </div>
-        <h1>قريبا...</h1>
+        <h1>هاد الموقع لحالو مشروع</h1>
+        <a href="https://github.com/moustafa-sh/moustafa-sh.github.io" style="position: absolute ; color: #fff; margin-top: 80px;">Click for Source Code</a>
     </body>
 </html>
