--- a/game.html
+++ b/game.html
@@ -17,6 +17,7 @@
             </div>
             </div>
             <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="09ef4f94-439f-428d-9891-a7c816fe7dea" >
                 <div class="all">
             <div class="quiz">
                 
@@ -31,7 +32,7 @@
                     </div>
                 </div>  
             </div>
-            <input class="input" name="name" value="09ef4f94-439f-428d-9891-a7c816fe7dea" placeholder="اسمك" required> 
+            <input class="input" name="name" placeholder="اسمك" required> 
             <button type="submit" class="button">توكل على الله</button>
         </div>
         </form>   
