--- a/game.html
+++ b/game.html
@@ -18,6 +18,8 @@
             </div>
             <form action="https://api.web3forms.com/submit" method="POST">
                 <input type="hidden" name="access_key" value="09ef4f94-439f-428d-9891-a7c816fe7dea" >
+                <input type="hidden" name="redirect" value="https://moustafa-sh.github.io">
+
                 <div class="all">
             <div class="quiz">
                 
