--- a/message.html
+++ b/message.html
@@ -36,7 +36,7 @@
             </div>
             <div class="dec">
                 <h1 class="mess" id="mess" style="text-align: right; color: white; margin-top: 130px;">الرسالة</h1>
-                <textarea type="text" name="message" id="message" class="des" placeholder=" خود راحتك بس لا تتمادى" required></textarea>
+                <textarea type="text" name="message" id="message" class="des" placeholder=" خود راحتك" required></textarea>
             </div>    
             <button type="submit" class="button">توكل على الله</button>
         </div>
